--- a/VikopApi.Application/VikopApi.Application.csproj
+++ b/VikopApi.Application/VikopApi.Application.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.8" />
+    <ProjectReference Include="..\VikopApi.Domain\VikopApi.Domain.csproj" />
   </ItemGroup>
 
 </Project>
