--- a/VikopApi.Api/appsettings.json
+++ b/VikopApi.Api/appsettings.json
@@ -7,5 +7,10 @@
   },
   "AllowedHosts": "*",
 
-  "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;DataBase=Vikop;Trusted_Connection=true;MultipleActiveResultSets=true"
+  "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;DataBase=Vikop;Trusted_Connection=true;MultipleActiveResultSets=true",
+  "Auth": {
+    "Audience": "https://localhost:7141/",
+    "Issuer": "https://localhost:7141/",
+    "SecretKey": "veryimportantsecretauthenticationkey"
+  }
 }
