--- a/VikopApi.Api/appsettings.json
+++ b/VikopApi.Api/appsettings.json
@@ -12,5 +12,8 @@
     "Audience": "https://localhost:7141/",
     "Issuer": "https://localhost:7141/",
     "SecretKey": "veryimportantsecretauthenticationkey"
+  },
+  "Image": {
+    "Profile":  "wwwroot/images/profile-pictures"
   }
 }
