--- a/VikopApi.Api/appsettings.json
+++ b/VikopApi.Api/appsettings.json
@@ -14,6 +14,7 @@
     "SecretKey": "veryimportantsecretauthenticationkey"
   },
   "Image": {
-    "Profile":  "wwwroot/images/profile-pictures"
+    "Profile": "wwwroot/images/profile-pictures",
+    "Finding":  "wwwroot/images/finding-images"
   }
 }
