Finding and profile pictures

--- a/VikopApi.Api/appsettings.json
+++ b/VikopApi.Api/appsettings.json
@@ -15,6 +15,7 @@
   },
   "Image": {
     "Profile": "wwwroot/images/profile-pictures",
-    "Finding":  "wwwroot/images/finding-images"
+    "Finding": "wwwroot/images/finding-images",
+    "Placeholder":  "placeholder.jpg"
   }
 }
