--- a/VikopApi.Api/appsettings.json
+++ b/VikopApi.Api/appsettings.json
@@ -16,6 +16,7 @@
   "Image": {
     "Profile": "wwwroot/images/profile-pictures",
     "Finding": "wwwroot/images/finding-images",
+    "Comment":  "wwwroot/images/comment-pictures",
     "Placeholder":  "placeholder.jpg"
   }
 }
