feature: add finding pagination

--- a/VikopApi.Api/appsettings.json
+++ b/VikopApi.Api/appsettings.json
@@ -16,7 +16,8 @@
   "Image": {
     "Profile": "wwwroot/images/profile-pictures",
     "Finding": "wwwroot/images/finding-images",
-    "Comment":  "wwwroot/images/comment-pictures",
-    "Placeholder":  "placeholder.jpg"
-  }
+    "Comment": "wwwroot/images/comment-pictures",
+    "Placeholder": "placeholder.jpg"
+  },
+  "PageSize": "5"
 }
