--- a/VikopApi.Tests.Unit/VikopApi.Tests.Unit.csproj
+++ b/VikopApi.Tests.Unit/VikopApi.Tests.Unit.csproj
@@ -9,7 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Moq.EntityFrameworkCore" Version="6.0.1.4" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
@@ -18,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VikopApi.Application\VikopApi.Application.csproj" />
+    <ProjectReference Include="..\VikopApi.Database\VikopApi.Database.csproj" />
   </ItemGroup>
 
 </Project>
